# QtOpenGlApp

./: .gitignore  CMakeLists.txt  ControlsWidget.cpp  ControlsWidget.h  CustomGLWidget.cpp  CustomGLWidget.h  GLTexture.cpp  GLTexture.h  MainWindow.cpp  MainWindow.h  Renderer.cpp  Renderer.h  files.txt  main.cpp  resources.qrc
shaders/: simple_shader.fsh  simple_shader.vsh
